--- a/config/serverCluster.conf
+++ b/config/serverCluster.conf
@@ -12,7 +12,7 @@ net:
     certificateKeyFile: /data/ssl/mdb_nodes_keycert.pem
     certificateKeyFilePassword: Fja0RhdGUiOiIyMDIxLTAyLTE5IiwicGFpZF
     clusterFile: /data/ssl/mdb_nodes_keycert.pem
-    clusterPassword: cHt9FbWOGRyNhgae7KZy
+    clusterPassword: Fja0RhdGUiOiIyMDIxLTAyLTE5IiwicGFpZF
     allowInvalidCertificates: true
     allowInvalidHostnames: true
 security:
