Removing harcoded keys part 1

--- a/config/serverCluster.conf
+++ b/config/serverCluster.conf
@@ -10,9 +10,9 @@ net:
     mode: requireTLS
     CAFile: /data/ssl/server_root_CA.crt
     certificateKeyFile: /data/ssl/mdb_nodes_keycert.pem
-    certificateKeyFilePassword: Fja0RhdGUiOiIyMDIxLTAyLTE5IiwicGFpZF
+    certificateKeyFilePassword: <INSERT YOUR KEY HERE>
     clusterFile: /data/ssl/mdb_nodes_keycert.pem
-    clusterPassword: Fja0RhdGUiOiIyMDIxLTAyLTE5IiwicGFpZF
+    clusterPassword: <INSERT YOUR CLUSTER KEY HERE>
     allowInvalidCertificates: true
     allowInvalidHostnames: true
 security:
