--- a/config/serverCluster.conf
+++ b/config/serverCluster.conf
@@ -1,7 +1,7 @@
 storage:
   dbPath: /data/db
 replication:
-  replSetName: my-replica-set
+  replSetName: <INSERT YOUR RS NAME HERE>
   enableMajorityReadConcern: true
 net:
   port: 27017
