--- a/ssl/scripts/dev_env/node_cnf/nodoXX_CN.cnf
+++ b/ssl/scripts/dev_env/node_cnf/nodoXX_CN.cnf
@@ -28,7 +28,11 @@ extendedKeyUsage = clientAuth, serverAuth
 
 #here you can set your prefered IP pool, each one should have a config mongodb server
 [ alternate_names ]
-IP.1 = 10.0.0.12
-IP.2 = 127.0.0.1
-IP.3 = ::1
-DNS.1 = localhost
+IP.1 = 127.0.0.1
+IP.2 = ::1
+IP.3 = localhost
+
+DNS.1 = kathesama.com.ar
+DNS.2 = prod.kathesama.com.ar
+DNS.3 = *.kathesama.com.ar
+DNS.4 = localhost
