chore: fixed config files

--- a/config/serverCluster.conf
+++ b/config/serverCluster.conf
@@ -1,7 +1,7 @@
 storage:
   dbPath: /data/db
 replication:
-  replSetName: <INSERT YOUR RS NAME HERE>
+  replSetName: ${REPLICASET}
   enableMajorityReadConcern: true
 net:
   port: 27017
@@ -10,9 +10,9 @@ net:
     mode: requireTLS
     CAFile: /data/ssl/server_root_CA.crt
     certificateKeyFile: /data/ssl/mdb_nodes_keycert.pem
-    certificateKeyFilePassword: <INSERT YOUR KEY HERE>
+    certificateKeyFilePassword: ${CA_TOKEN}
     clusterFile: /data/ssl/mdb_nodes_keycert.pem
-    clusterPassword: <INSERT YOUR CLUSTER KEY HERE>
+    clusterPassword: ${CA_TOKEN}
     allowInvalidCertificates: true
     allowInvalidHostnames: true
 security:
