chore: fixing common names at config

--- a/ssl/scripts/dev_env/node_cnf/nodoXX_CN.cnf
+++ b/ssl/scripts/dev_env/node_cnf/nodoXX_CN.cnf
@@ -14,7 +14,7 @@ countryName         = AR
 stateOrProvinceName         = Buenos Aires
 localityName                = Buenos Aires Capital Federal
 organizationName            = kathevigs
-commonName         = XXXXXXXXCHANGE_NAME_HEREXXXXXXXXX
+commonName         = prod.kathesama.com.ar
 emailAddress = kathesama@gmail.com
 ####################################################################
 [ server_req_extensions ]
