--- a/ssl/scripts/dev_env/node_cnf/client_CN.cnf
+++ b/ssl/scripts/dev_env/node_cnf/client_CN.cnf
@@ -14,7 +14,7 @@ countryName         = AR
 stateOrProvinceName         = Buenos Aires
 localityName                = Buenos Aires Capital Federal
 organizationName            = kathevigs
-commonName         = ClientNodeCon
+commonName         = prod.kathesama.com.ar
 emailAddress = kathesama@gmail.com
 ####################################################################
 
